--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 		"typescript": "^5.1.6"
 	},
 	"dependencies": {
+		"axios": "^1.5.0",
 		"dotenv": "^16.3.1",
 		"graphql": "^16.7.1",
 		"graphql-request": "^6.1.0",
