--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 		"typescript": "^5.1.6"
 	},
 	"dependencies": {
+		"@account-abstraction/contracts": "^0.6.0",
+		"@ethersproject/providers": "^5.7.2",
 		"axios": "^1.5.0",
 		"dotenv": "^16.3.1",
 		"graphql": "^16.7.1",
