--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@ethersproject/providers": "^5.7.2",
 		"axios": "^1.5.0",
 		"dotenv": "^16.3.1",
+		"ethers": "5.0.0",
 		"graphql": "^16.7.1",
 		"graphql-request": "^6.1.0",
 		"moralis": "^2.22.4",
